# claude-data-reporter

./: .env.example  .gitignore  ANALYSIS_SYSTEM_PROMPT.md  LICENSE  PROJECT_CONTEXT.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/: architecture.md  learning-notes.md
examples/: generate_sample_data.py  sample_sales.csv
src/: __init__.py  analyzer.py  cli.py  profiler.py  reporter.py  utils.py  visualizer.py
tests/: test_analyzer.py  test_profiler.py  test_reporter.py  test_visualizer.py
